[package]
name = "vdf-parser"
authors = ["Raúl Rivadeneyra <"]
description = "A parser for Valve Data Format (VDF) files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/RaulRivadeneyra/vdf-parser"
homepage = "https://github.com/RaulRivadeneyra/vdf-parser"
documentation = "https://docs.rs/vdf-parser"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.49"
rand = "0.8.5"